fixed horizontal scroll bug

--- a/angular-workspace/src/app/grocery-list/grocery-list.component.css
+++ b/angular-workspace/src/app/grocery-list/grocery-list.component.css
@@ -50,7 +50,7 @@ button{
 
 @media (min-width: 700px) {
   .wrapper {
-    grid-template-columns: 30% 70%;
+    grid-template-columns: 3fr 7fr;
     grid-template-areas:
       "list groceries"
       "list button"
